# graphics-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  copy_assets.cmake
examples/: CMakeLists.txt
examples/empty_window/: CMakeLists.txt  main.cpp
examples/perfomance_test/: CMakeLists.txt  main.cpp
examples/performance_test/: CMakeLists.txt  main.cpp
examples/tilemap/: CMakeLists.txt  main.cpp
inc/: Chunk.hpp  Color.hpp  CommandBuffer.hpp  Font.hpp  GpuBuffer.hpp  GpuRenderFunctions.hpp  GpuRenderer.hpp  GpuSampler.hpp  GpuShader.hpp  GpuTexture.hpp  GpuTransferBuffer.hpp  RenderBatch.hpp  RenderFunctions.hpp  Renderer.hpp  SpriteAnimation.hpp  SpriteSheet.hpp  Surface.hpp  Text.hpp  TextEngine.hpp  TileMap.hpp  Vertex.hpp  ViewportGuard.hpp  Window.hpp
inc/graphics/: BatchHelpers.hpp  Chunk.hpp  Color.hpp  ColorModGuard.hpp  Enums.hpp  Font.hpp  GpuGraphicsPipeline.hpp  GpuRenderFunctions.hpp  GpuRenderer.hpp  GpuTexture.hpp  GpuTextureSDL.hpp  RenderBatch.hpp  Renderer.hpp  Sprite.hpp  SpriteAnimation.hpp  SpriteSheet.hpp  Surface.hpp  Text.hpp  TextEngine.hpp  Texture.hpp  TextureSDL.hpp  TileMap.hpp  TileMapData.hpp  Vertex.hpp  ViewportGuard.hpp  Window.hpp  config.hpp  exception.hpp  graphics.hpp
shaders/: Gradient.frag.hlsl  OnlyPosition.vert.hlsl  PullSpriteBatch.vert.hlsl  SolidColor.frag.hlsl  TextureQuad.frag.hlsl  TextureQuad.vert.hlsl  TextureQuadColor.frag.hlsl  TileMap.vert.hlsl  VertexPositionMatrix.vert.hlsl
src/: Chunk.cpp  Color.cpp  ColorModGuard.cpp  Font.cpp  GpuGraphicsPipeline.cpp  GpuRenderer.cpp  GpuSampler.cpp  GpuShader.cpp  RenderBatch.cpp  Renderer.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteSheet.cpp  Surface.cpp  Text.cpp  TileMap.cpp  ViewportGuard.cpp  Window.cpp
src/graphics/: Chunk.cpp  Color.cpp  Font.cpp  GpuGraphicsPipeline.cpp  GpuRenderer.cpp  GpuShader.cpp  GpuTextureSDL.cpp  RenderBatch.cpp  Renderer.cpp  RendererImpl.cpp  RendererImpl.hpp  SDLRenderer.cpp  SDLRenderer.hpp  Sprite.cpp  SpriteSheet.cpp  Surface.cpp  Text.cpp  TextEngine.cpp  TextureSDL.cpp  TileMap.cpp  TileMapImpl.cpp  TileMapImpl.hpp  Window.cpp  exception.cpp  graphics.cpp
src/graphics/GPURenderer/: Chunk.cpp  Chunk.hpp  GpuTilemapSDL.cpp  GpuTilemapSDL.hpp  RendererImplGPU.cpp  RendererImplGPU.hpp  WindowClaimer.cpp  WindowClaimer.hpp
src/graphics/SDLRenderer/: Chunk.cpp  Chunk.hpp  RendererImplSDL.cpp  RendererImplSDL.hpp  SDLRenderer.cpp  SDLRenderer.hpp  TilemapSDL.cpp  TilemapSDL.hpp
